# char-rnn

./: README.md  pyproject.toml
data/: data_utils.py  dataloader.py
data_files/: coffee.txt
model/: lstm.py  model_utils.py
notebooks/: shakespeare_model.ipynb  test.ipynb
train/: train.py
